--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   flutter_spinkit: ^5.1.0
   get: ^4.6.5
   share_plus: ^4.0.10
+  url_launcher: ^6.1.5
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
